--- a/COMP 397 - Assignment 1/css/main.css
+++ b/COMP 397 - Assignment 1/css/main.css
@@ -33,6 +33,8 @@
 }
 /*Styling for slide paragraphs*/
 .slide p{
+    
+    color:#ff6a00;
     margin-top:15px;
     margin-bottom:30px;
     line-height:45px;
@@ -60,3 +62,6 @@
         padding-top:25px;
         text-align:center; 
     }
+
+
+    
